--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -16,18 +16,18 @@
     <div class="container2">
         <h4><strong> Ingrese los siguientes datos </strong></h4>
         <br>
+        <!--PARA EL REGISTRO DE DATOS DEL VISITANTE -->
         <form role="form" class="form-horizontal">
-
-
-            <!--PARA EL REGISTRO DE DATOS DEL VISITANTE -->
-            <div class="form-group has-feedback">
-                <label for="nombre" class="control-label col-md-3"> Nombre </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Escriba el nombre completo" required="required" />
+            <div class="form-group">
+                <div class="has-feedback">
+                    <label class="control-label col-xs-3">Nombre:</label>
+                    <div class="col-xs-6">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Escriba el nombre completo" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
                     </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
                 </div>
             </div>
 
@@ -35,8 +35,8 @@
             <!-- -->
 
             <div class="form-group has-feedback">
-                <label for="dependencia" class="control-label col-md-3"> Dependencia </label>
-                <div class="col-md-6">
+                <label for="dependencia" class="control-label col-xs-3">Dependencia:</label>
+                <div class="col-xs-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
                         <input type="text" class="form-control" name="dependencia" id="dependencia" placeholder="" required="required" />
@@ -45,27 +45,16 @@
                 </div>
             </div>
 
-            <!-- -->
+
+
+            <!--  -->
 
             <div class="form-group has-feedback">
-                <label for="puesto" class="control-label col-md-3"> Puesto </label>
-                <div class="col-md-6">
+                <label for="puesto" class="control-label col-xs-3">Puesto:</label>
+                <div class="col-xs-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="puesto" id="puesto" maxlength="50" placeholder="" required="required" />
-                    </div>
-                    <span class="glyphicon form-control-feedback verif"></span>
-                </div>
-            </div>
-
-            <!--   -->
-
-            <div class="form-group has-feedback">
-                <label for="localidad" class="control-label col-md-3"> Localidad </label>
-                <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
-                        <input type="text" class="form-control" name="localidad" id="localidad" maxlength="50" placeholder="Anote el nombre completo" required="required" />
+                        <input type="text" class="form-control" name="puesto" id="puesto" maxlength="" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -74,144 +63,153 @@
             <!--  -->
 
             <div class="form-group has-feedback">
-                <label for="local" class="control-label col-md-3"> Teléfonos </label>
-                <div class="col-md-3">
+                <label for="localidad" class="control-label col-xs-3">Localidad:</label>
+                <div class="col-xs-6">
                     <div class="input-group">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
-                        <input type="text" class="form-control" name="local" id="local" maxlength="13" placeholder="Local" required="required" />
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
+                        <input type="text" class="form-control" name="localidad" id="localidad" maxlength="" placeholder="A" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
+            </div>
+
+            <!-- -->
 
 
-                <!-- -->
+            <div class="form-group has-feedback">
+                <label for="visita" class="control-label col-xs-3">Visita:</label>
+                <div class="col-xs-6">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <select class="form-control">
+                            <option> Seleccione </option>
+                            <option> Secretaria </option>
+                            <option> Sec. Téc. </option>
+                        </select>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+
+                </div>
+            </div>
+
+
+            <!--  -->
+            <div class="form-group has-feedback">
+                <label for="local" class="control-label col-xs-3">Teléfonos:</label>
+                <div class="col-xs-6">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
+                        <input type="tel" class="form-control" name="local" id="local" maxlength="13" placeholder="Local" required="required" />
+                    </div>
+                    <span class="glyphicon form-control-feedback verif"></span>
+                </div>
+            </div>
+
+
+            <!--
 
                 <div class="form-group has-feedback">
-                    <!-- <label></label>-->
+<!-- <label></label>
                     <div class="form-group col-lg-3">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                            <input type="text" class="form-control" name="cel" id="cel" maxlength="13" placeholder="Celular" required="required" />
+                            <input type="tel" class="form-control" name="cel" id="cel" maxlength="" placeholder="Celular" required="required" />
                         </div>
                         <span class="glyphicon form-control-feedback verif"></span>
                     </div>
+                </div>-->
+
+
+
+            <!--  -->
+
+            <div class="form-group">
+                <label for="asunto" class="control-label col-xs-3">Asunto:</label>
+                <div class="col-xs-6">
+                    <textarea rows="3" class="form-control"></textarea>
                 </div>
+            </div>
 
-                <!-- -->
 
-                <div class="form-group has-feedback">
-                    <label for="visita" class="control-label col-md-3"> Visita a: </label>
-                    <div class="col-md-6">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <select class="form-control" name="direccion" id="direccion">
-                                <option value="Seleccione"> Seleccione </option>
-                                <option value="Secretaria"> Secretaria </option>
-                                <option value="Técnico"> Sec. Téc. </option>
-                                <option value="Particular"> Sec. Particular</option>
-                                <option value="Giras"> Giras</option>
-                                <option value="Comunicacion"> Comunicación</option>
-                                <option value="coordinacion"> Coordinación Gral. de Organos de Vigilancia </option>
-                                <option value="Direccion Auditoria"> Dirección Gral. de Auditoria Gubernamental </option>
-                            </select>
-                            <span class="glyphicon form-control-feedback verif"></span>
-                        </div>
 
+
+            <!-- 
+
+            <div class="well">
+                <label for="fecha" class="control-label col-xs-3"> Fecha: </label>
+                <div class="col-xs-6">
+                    <div id="date" class="input-append">
+                        <input data-format="yyyy-mm-dd" type="text">
+                        <span class="add-on">
+                         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
+                        </span>
                     </div>
                 </div>
+            </div>
+            <br>
+            <br>-->
 
-                <!--  -->
 
-                <div class="">
-                    <form role="form">
-                        <div class="form-group">
-                            <label for="asunto"> Asunto a describir </label>
-                            <textarea class="form_control" rows="5" id="asunto"></textarea>
+            <!--V A L I D A C I O N -->
+
+            <div class="form-group">
+                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
+            </div>
+
+            <!-- Modal true -->
+
+            <div class="modal fade" id="modaltrue" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h2> Exito! </h2>
                         </div>
-                    </form>
-                </div>
-
-
-                <!--  -->
-
-                <div class="form-group has-feedback">
-                    <label for="visita" class="control-label col-md-3"> Fecha: </label>
-                    <div class="col-md-3">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                            <input type="date" class="btn btn-ttc">
-                            <span class="glyphicon form-control-feedback verif"></span>
+                        <div class="modal-body">
+                            <p>¡Capturaste correctamente los datos!</p>
                         </div>
-                    </div>
-                    <br>
-                    <br>
-
-
-                    <!--V A L I D A C I O N -->
-
-                    <div class="form-group">
-                        <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
-                    </div>
-
-                    <!-- Modal true -->
-
-                    <div class="modal fade" id="modaltrue" role="dialog">
-                        <div class="modal-dialog">
-
-                            <!-- Modal content-->
-
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h2> Exito! </h2>
-                                </div>
-                                <div class="modal-body">
-                                    <p>¡Capturaste correctamente los datos!</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Modal false -->
-
-                    <div class="modal fade" id="modalfalse" role="dialog">
-                        <div class="modal-dialog id=tamaño">
-
-                            <!-- Modal content-->
-
-                            <div class="modal-content">
-                                <div class="modal-header1">
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h2> Error! </h2>
-                                    <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
-                                </div>
-                                <div class="modal-body1">
-                                    <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
-                                </div>
-                            </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Modal false -->
+
+            <div class="modal fade" id="modalfalse" role="dialog">
+                <div class="modal-dialog id=tamaño">
+
+                    <!-- Modal content-->
+
+                    <div class="modal-content">
+                        <div class="modal-header1">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h2> Error! </h2>
+                            <!--  <div class="alert alert-success hidden" id="success-alert"></div>-->
+                        </div>
+                        <div class="modal-body1">
+                            <p><strong> ¡Ojo: </strong> Capture correctamente sus datos!!</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal"> Cerrar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </form>
-        </div>
+    </div>
 
-
-
-
-        <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
-        <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
-        <script src="../js/controladores/agendando.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+    <script src="js/ui-bootstrap-tpls-1-1-2.min.js"></script>
+    <script src="../js/controladores/agendando.js"></script>
 </body>
 
 </html>
-<!--<div class="btn-group-vertical">
-                <div class="row onl_row-sm-offset-3">
-                    <div class="col-xs-2 col-sm-2">  -->
