--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -24,7 +24,7 @@
                     <div class="col-xs-6">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Escriba el nombre completo" required="required" />
+                            <input type="text" class="form-control" name="nombre" id="nombre" placeholder="" required="required" />
                         </div>
                         <span class="glyphicon form-control-feedback verif"></span>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="col-xs-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="puesto" id="puesto" maxlength="" placeholder="" required="required" />
+                        <input type="text" class="form-control" name="puesto" id="puesto" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -67,7 +67,7 @@
                 <div class="col-xs-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-globe"></i></span>
-                        <input type="text" class="form-control" name="localidad" id="localidad" maxlength="" placeholder="A" required="required" />
+                        <input type="text" class="form-control" name="localidad" id="localidad" placeholder="" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -96,64 +96,68 @@
             <!--  -->
             <div class="form-group has-feedback">
                 <label for="local" class="control-label col-xs-3">Teléfonos:</label>
-                <div class="col-xs-6">
+                <div class="col-xs-3">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-phone-alt"></i></span>
                         <input type="tel" class="form-control" name="local" id="local" maxlength="13" placeholder="Local" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
-            </div>
 
 
-            <!--
-
-                <div class="form-group has-feedback">
-<!-- <label></label>
-                    <div class="form-group col-lg-3">
+                <div class="col-xs-3">
+                    <label class="control-label col-xs-3">Celular</label>
+                    <div class="form-group has-feedback col-xs-10">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-phone"></i></span>
-                            <input type="tel" class="form-control" name="cel" id="cel" maxlength="" placeholder="Celular" required="required" />
+                            <input type="tel" class="form-control" name="cel" id="cel" maxlength="13" placeholder="Celular" required="required" />
                         </div>
                         <span class="glyphicon form-control-feedback verif"></span>
                     </div>
-                </div>-->
-
+                </div>
+            </div>
 
 
             <!--  -->
 
-            <div class="form-group">
-                <label for="asunto" class="control-label col-xs-3">Asunto:</label>
-                <div class="col-xs-6">
-                    <textarea rows="3" class="form-control"></textarea>
+            <div class="form-group has-feedback">
+                <label for="fecha" class="control-label col-xs-3">Fecha:</label>
+                <div class="col-xs-3">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        <input type="date" class="form-control" name="fecha" id="fecha" placeholder="dd/mm/aaaa" required="required" />
+                    </div>
+                    <span class="glyphicon form-control-feedback verif"></span>
                 </div>
-            </div>
 
 
-
-
-            <!-- 
-
-            <div class="well">
-                <label for="fecha" class="control-label col-xs-3"> Fecha: </label>
-                <div class="col-xs-6">
-                    <div id="date" class="input-append">
-                        <input data-format="yyyy-mm-dd" type="text">
-                        <span class="add-on">
-                         <i data-time-icon="icon-time" data-date-icon="icon-calendar"></i>
-                        </span>
+                <div class="col-xs-3">
+                    <label class="control-label col-xs-3">Hora:</label>
+                    <div class="form-group has-feedback col-xs-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+                            <input type="time" class="form-control" name="hora" id="hora" required="required" />
+                        </div>
+                        <span class="glyphicon form-control-feedback verif"></span>
                     </div>
                 </div>
             </div>
-            <br>
-            <br>-->
+
+            <!-- -->
+
+            <div class="form-group">
+                <label for="asunto" class="control-label col-xs-3">Asunto:</label>
+                <div class="col-xs-6">
+                    <textarea rows="2" class="form-control"></textarea>
+                </div>
+            </div>
+
 
 
             <!--V A L I D A C I O N -->
 
             <div class="form-group">
-                <button type="button" class="btn btn-success col-md-4 col-md-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
+                <button type="button" class="btn btn-success col-xs-4 col-xs-offset-4" id="agenda" name="agenda" data-toggle="modal" data-target=""> Guardar Datos</button>
             </div>
 
             <!-- Modal true -->
