--- a/vistas/agendando.html
+++ b/vistas/agendando.html
@@ -14,6 +14,25 @@
 <body>
 
     <div class="container2">
+
+        <nav role="navigation" class="navbar navbar-default">
+            <div class="navbar-header">
+                <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <!-- <a href="#" class="navbar-brand">Audiencias</a>-->
+            </div>
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Agendar</a></li>
+                    <li class="active"><a href="#">Buscar/Seguimiento/Imprimir</a></li>
+                </ul>
+            </div>
+        </nav>
+
+
         <h4><strong> Ingrese los siguientes datos </strong></h4>
         <br>
         <!--PARA EL REGISTRO DE DATOS DEL VISITANTE -->
