--- a/vistas/acceso.html
+++ b/vistas/acceso.html
@@ -25,7 +25,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                        <input type="email" class="form-control" name="email" id="usuario" placeholder="gabriel.quiroz@hidalgo.gob.mx" required="required" />
+                        <input type="email" class="form-control" name="txtUsuario" id="txtUsuario" placeholder="gabriel.quiroz@hidalgo.gob.mx" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
@@ -38,7 +38,7 @@
                 <div class="col-md-6">
                     <div class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                        <input type="text" class="form-control" name="password" id="password" placeholder="gbrlquiroz" required="required" />
+                        <input type="password" class="form-control" name="txtClave" id="txtClave" placeholder="gbrlquiroz" required="required" />
                     </div>
                     <span class="glyphicon form-control-feedback verif"></span>
                 </div>
