--- a/seguimiento.html
+++ b/seguimiento.html
@@ -3,31 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> AGENDAH </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Seguimiento </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/titulos.css">
     <link rel="stylesheet" href="../css/dise.css">
-    <link rel="stylesheet" href="../css/menu.css">
-
 </head>
 
 <body>
+
     <div class="container2">
 
-        <div class="row">
-            <div class="col-md-4">
-                <a href="#" class="btn btn-sample btn-lg btn-block">Agendar Audiencia</a>
-            </div>
-            <div class="col-md-4">
-                <a href="#" class="btn btn-sample btn-lg btn-block"> Buscar / Seguimiento / Imprimir </a>
-            </div>
-        </div>
-
-
-
-
-        <h4><strong> Ingrese los siguientes datos </strong></h4>
+        <h4><strong> S e g u i m i e n t o </strong></h4>
         <br>
         <!--PARA EL REGISTRO DE DATOS DEL VISITANTE -->
         <form role="form" class="form-horizontal">
@@ -101,7 +89,6 @@
                         </select>
                         <span class="glyphicon form-control-feedback verif"></span>
                     </div>
-
                 </div>
             </div>
 
@@ -165,7 +152,34 @@
                 </div>
             </div>
 
+            <!-- -->
 
+            <div class="form-group has-feedback">
+                <label for="visita" class="control-label col-xs-3">Estatus:</label>
+                <div class="col-xs-6">
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                        <select class="form-control">
+                            <option> Seleccione </option>
+                            <option> Atendido </option>
+                            <option> Pendiente </option>
+                            <option> Citado </option>
+                            <option> Canalizado </option>
+                        </select>
+                        <span class="glyphicon form-control-feedback verif"></span>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- -->
+
+            <div class="form-group">
+                <label for="asunto" class="control-label col-xs-3">Seguimiento:</label>
+                <div class="col-xs-6">
+                    <textarea rows="2" class="form-control"></textarea>
+                </div>
+            </div>
 
             <!--V A L I D A C I O N -->
 
