--- a/buscar.html
+++ b/buscar.html
@@ -19,71 +19,73 @@
             <section class="content">
                 <!--    <h1></h1>  --->
                 <div class="col-md-6 col-md-offset-3">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="pull-right">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-success btn-filter" data-target="atendido">Atendido</button>
-                                    <button type="button" class="btn btn-warning btn-filter" data-target="pendiente">Pendiente</button>
-                                    <button type="button" class="btn btn-danger btn-filter" data-target="citado">Citado</button>
-                                    <button type="button" class="btn btn-default btn-filter" data-target="canalizado">Canalizado</button>
-                                    <button type="button" class="btn btn-info btn-filter" data-target="todos">Todos</button>
-                                </div>
+                    <!--    <div class="panel panel-default">-->
+                    <div class="panel-body">
+                        <div class="pull-right">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-success btn-filter" data-target="atendido">Atendido</button>
+                                <button type="button" class="btn btn-warning btn-filter" data-target="pendiente">Pendiente</button>
+                                <button type="button" class="btn btn-danger btn-filter" data-target="citado">Citado</button>
+                                <button type="button" class="btn btn-default btn-filter" data-target="canalizado">Canalizado</button>
+                                <button type="button" class="btn btn-info btn-filter" data-target="todos">Todos</button>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </section>
         </div>
-    </div>
 
-    <!--    <h3> </h3>
+
+        <!--    <h3> </h3>
                 <br>
                 <br> -->
 
 
-    <!-- <div ng-controller="mioControl">-->
-    <div class="table-responsive">
-        <table class="table table-filter">
-            <tbody>
-                <tr data-status="atendido">
-                    <td>
-                        <div class="ckbox">
-                            <input type="checkbox" id="checkbox1">
-                            <label for="checkbox1"></label>
-                        </div>
-                    </td>
-                    <th>Fecha</th>
-                    <th>Nombre</th>
-                    <th>Dependencia</th>
-                    <th>Teléfono</th>
-                    <th>Delete</th>
-                    </thead>
-                    <tbody>
+        <!-- <div ng-controller="mioControl">-->
+        <div class="table-responsive">
+            <table class="table table-filter">
+                <tbody>
+                    <tr data-status="atendido">
+                        <td>
+                            <div class="ckbox">
+                                <input type="checkbox" id="checkbox1">
+                                <label for="checkbox1"></label>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="media"></div>
+
+                            <th>Fecha</th>
+                            <th>Nombre</th>
+                            <th>Dependencia</th>
+                            <th>Teléfono</th>
 
 
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <input type="checkbox" class="checkthis" />
-                                </td>
-                                <td>{{data.fecha}}</td>
-                                <td>{{data.nombre}}</td>
-                                <td>{{data.dependencia}}</td>
-                                <td>{{data.telefono}}</td>
-                            </tr>
-                            <tr ng-repeat="data in datosResource">
-                                <td>{{data.fecha}}</td>
-                                <td>{{data.nombre}}</td>
-                                <td>{{data.dependencia}}</td>
-                                <td>{{data.telefono}}</td>
-                            </tr>
-                        </tbody>
+                            <tbody>
 
-        </table>
+
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <input type="checkbox" class="checkthis" />
+                                        </td>
+                                        <td>{{data.fecha}}</td>
+                                        <td>{{data.nombre}}</td>
+                                        <td>{{data.dependencia}}</td>
+                                        <td>{{data.telefono}}</td>
+                                    </tr>
+                                    <tr ng-repeat="data in datosResource">
+                                        <td>{{data.fecha}}</td>
+                                        <td>{{data.nombre}}</td>
+                                        <td>{{data.dependencia}}</td>
+                                        <td>{{data.telefono}}</td>
+                                    </tr>
+                                </tbody>
+            </table>
+        </div>
     </div>
-    </div>
-    </div>
+
 
 
 
